update service and login
